--- a/_includes/nuvlabox-sub-menu.html
+++ b/_includes/nuvlabox-sub-menu.html
@@ -19,7 +19,7 @@
                 <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/tech-spec">Tech Specs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/hardware">Hardware</a>
+                <a class="nav-link" id="navbarMenuLink-hardware" href="/products-and-services/{{ page.product }}/hardware">Hardware</a>
               </li>
             </ul>
           </div>
