--- a/sass/theme/_section-news.scss
+++ b/sass/theme/_section-news.scss
@@ -1,3 +1,9 @@
+.section-partners {
+  .owl-dots {
+    margin-top: 20px;
+  }
+}
+
 .section-news {
 	@media (max-width: 767px) {
 		padding-bottom: 60px;
