Update APAC address

--- a/_includes/primary-footer.html
+++ b/_includes/primary-footer.html
@@ -12,7 +12,7 @@
 					</div>
 				</div>
 				<div class="row mt-30 footer-content mb-10">
-					<div class="col-md-3">
+					<div class="col-md-4">
 						<h4>Headquarters:</h4>
 						<ul>
 							<li class="fw400">SixSq</li>
@@ -21,7 +21,7 @@
 							<li class="fw400">Switzerland</li>
 						</ul>
 					</div>
-					<div class="col-md-3 contact">
+					<div class="col-md-4 contact">
 						<h4>North American Office:</h4>
 						<ul>
 							<li class="fw400">SixSq, c/o RHEA</li>
@@ -30,22 +30,11 @@
 							<li class="fw400">Canada</li>
 						</ul>
 					</div>
-					<div class="col-md-3 contact">
-						<h4>Asia Pacific Office:</h4>
-						<ul>
-							<li class="fw400">SixSq, c/o Rochade</li>
-							<li class="fw400">10 Anson Road 09-03</li>
-							<li class="fw400">International Plaza, 079903</li>
-							<li class="fw400">Singapore</li>
-						</ul>
-					</div>
-					<div class="col-md-3 contact">
-						<h4>India Office:</h4>
+					<div class="col-md-4 contact">
+						<h4>Asia Pacific:</h4>
 						<ul>
 							<li class="fw400">SixSq, c/o Concort</li>
-							<li class="fw400">16B Venetia Tower, Tata Raisina, Sector 59</li>
-							<li class="fw400">Gurgaon-Delhi NCR 122101, Haryana</li>
-							<li class="fw400">India</li>
+							<li class="fw400"><a href="ashekahr@concort.co">ashekahr@concort.co</a></li>
 						</ul>
 					</div>
 				</div>
