--- a/_includes/primary-footer.html
+++ b/_includes/primary-footer.html
@@ -33,9 +33,11 @@
 					<div class="col-md-4 contact">
 						<h4>Asia Pacific:</h4>
 						<ul>
-							<li class="fw400">SixSq, c/o Concort</li>
-							<li class="fw400"><a href="ashekahr@concort.co">ashekahr@concort.co</a></li>
-						</ul>
+							<li class="fw400">SixSq, c/o Concort Growth Services</li>
+							<li class="fw400">16B Venetia Tower, Raisina</li>
+							<li class="fw400">Sector 59, Delhi NCR India</li>
+							<li class="fw400"><a href="www.concort.co">www.concort.co</a></li>
+            </ul>
 					</div>
 				</div>
 			</div>
